# DPP

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml  construct-vcpkg-info.yml
buildtools/classes/Packager/: Vcpkg.php
cmake/: CPackSetup.cmake  PostInstall.cmake
cmake/Raw-Files/: Bottom-Of-Version-File.txt
dep/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/opus/: CMakeLists.txt
dep/sodium/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
resources/: dpp.aps  dpp.rc
src/dpp/: utility.cpp
vcpkg/ci-overlays/openssl/: vcpkg.json.txt
vcpkg/ci-overlays/opus/: vcpkg.json.txt
vcpkg/ci-overlays/sodium/: vcpkg.json.txt
vcpkg/ci-overlays/zlib/: vcpkg.json.txt
vcpkg/ports/dpp/: portfile.cmake
